--- a/app/src/main/res/drawable/underline.xml
+++ b/app/src/main/res/drawable/underline.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-<solid android:color="#39C1B6"/>
-    <corners android:bottomLeftRadius="35dp"
-        android:bottomRightRadius="35dp"/>
+    <stroke android:color="@color/white"
+        android:width="2dp"/>
+    <corners android:radius="5dp"/>
+
 </shape>
