--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -266,9 +266,9 @@
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="16dp"
                 android:text="@string/introduction"
-                android:textColor="@color/white"
+                android:textColor="#000000"
                 android:textFontWeight="5"
-                android:padding="5dp"
+                android:padding="8dp"
                 android:background="@drawable/underline"
                 android:textSize="25sp"
                 app:layout_constraintStart_toStartOf="parent"
